1342
No more crashes, but you get an error message now:
```scala
<console>:9: error: type mismatch;
 found   : O.this.T#T
 required: O.this.T
           def test3(that: O): T = this.test2 + that.test2
                                              ^
```
